# squigglepy

./: .gitignore  .pytest-runtimes  ;q  CHANGES.md  CLAUDE.md  LICENSE  Makefile  README.md  TODO.txt  corr_demo.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  pytest.yml
doc/source/: conf.py  index.rst  installation.rst  numeric_distributions.rst
doc/source/reference/: modules.rst  squigglepy.bayes.rst  squigglepy.correlation.rst  squigglepy.distributions.rst  squigglepy.numbers.rst  squigglepy.numeric_distribution.rst  squigglepy.rng.rst  squigglepy.rst  squigglepy.samplers.rst  squigglepy.utils.rst  squigglepy.version.rst
docs/: Makefile
docs/source/: conf.py  index.rst
squigglepy/: __init__.py  bayes.py  correlation.py  dice.py  distributions.py  numbers.py  numeric_distribution.py  pdh.py  rng.py  sample.py  samplers.py  utils.py  version.py
squigglepy/danger/: README.html  README.md  beta_from_ci.py
tests/: integration.py  strategies.py  test_accuracy.py  test_bayes.py  test_contribution_to_ev.py  test_correlation.py  test_dice.py  test_distributions.py  test_expectile.py  test_fraction_of_ev.py  test_numbers.py  test_numeric_distribution.py  test_pmh.py  test_rng.py  test_samplers.py  test_simplify.py  test_utils.py
