[tool.poetry]
name = "squigglepy"
version = "0.30-dev0"
description = "Squiggle programming language for intuitive probabilistic estimation features in Python"
authors = ["Peter Wildeford <peter@rethinkpriorities.org>"]
license = "MIT"
readme = "README.md"
include = ["CHANGES.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/rethinkpriorities/squigglepy"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
msgspec = "^0.20.0"
numpy = "^2.4.0"
scipy = "^1.16.3"
pyyaml = "^6.0.3"
tqdm = "^4.67.1"
pathos = "^0.3.4"
matplotlib = { version = "^3.10.8", optional = true }
pandas = { version = "^2.3.3", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
black = "^25.12.0"
seaborn = "^0.13.2"
hypothesis = "^6.148.9"
hypofuzz = "^25.11.1"

[tool.poetry.extras]
plots = ["matplotlib"]
ecosystem = ["pandas"]
all = ["plots", "ecosystem"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.black]
line-length = 99
